# document-organizer-mcp

./: README.md  dockerignore  env-2.example  env.example  gitignore  host-config.example-2.json  host-config.example.json  pyproject.toml  render.yaml  requirements.txt  server-2.py  server-3.py  server.py
document-organizer-mcp/: Dockerfile
document-organizer-mcp/data/: README.md
